name: tasty-th
version: 0.1.4
cabal-version: >= 1.8
build-type: Simple
license: BSD3
license-file: BSD3.txt
maintainer: Benno F端nfst端ck <benno.fuenfstueck@gmail.com>
homepage: http://github.com/bennofs/tasty-th
synopsis: Automatic tasty test case discovery using TH
description: Generate tasty TestTrees automatically with TemplateHaskell. See the README for example usage.

category: Testing
author: Oscar Finnsson & Emil Nordling & Benno F端nfst端ck

library
  exposed-modules: Test.Tasty.TH, Test.Tasty.TestVarieties
  build-depends: base >= 4 && < 5, tasty, template-haskell
  hs-source-dirs: src
  other-extensions: TemplateHaskell


test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -Wall
  build-depends:
      base >= 4.7 && < 5
    , tasty
    , tasty-th
    , tasty-quickcheck
    , tasty-smallcheck
    , tasty-hunit
    , tasty-hspec
    , tasty-golden
  other-modules:

source-repository head
  type:     git
  location: https://github.com/bennofs/tasty-th.git
